--- a/BotBinance/pom.xml
+++ b/BotBinance/pom.xml
@@ -8,7 +8,7 @@
   <dependency>
     <groupId>org.asynchttpclient</groupId>
     <artifactId>async-http-client</artifactId>
-    <version>2.2.0</version>
+    <version>2.12.3</version>
     
 </dependency>
 <dependency>
@@ -31,7 +31,11 @@
     <artifactId>json</artifactId>
     <version>20210307</version>
 </dependency>
-
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.26</version>
+</dependency>
 <dependency>
     <groupId>com.microsoft.sqlserver</groupId>
     <artifactId>mssql-jdbc</artifactId>
